hphp/hack/test/typecheck/subtype_collection_interfaces_2.php.exp
File "subtype_collection_interfaces_2.php", line 8, characters 15-43:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 34-41:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 34-41:
  Expected `arraykey`
  File "subtype_collection_interfaces_2.php", line 8, characters 22-26:
  But got `mixed`
